<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.examples.akshay.bluetoothfiletransfer.activities.Client">

    <TextView
        android:id="@+id/activity_data_transfer_text_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_received" />

    <EditText
        android:id="@+id/activity_data_transfer_edittext_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_data_transfer_button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <EditText
        android:id="@+id/activity_data_transfer_edittext_file_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_file_name_here"
        android:text="sdcard/odk/forms/All.widgets.xml"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_data_transfer_test_1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test1" />

        <Button
            android:id="@+id/activity_data_transfer_test_2"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/test2" />
    </LinearLayout>


</LinearLayout>
