<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.examples.akshay.bluetoothfiletransfer.activities.MainActivity">

    <Button
        android:id="@+id/main_activity_button_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server" />

    <Button
        android:id="@+id/main_activity_button_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client" />

    <Button
        android:id="@+id/main_activity_button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />
</LinearLayout>
